[project]
name = "streamlit-dvf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NyxAether", email = "contact.nyxhemera@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
streamlit-dvf = "streamlit_dvf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]
